[metadata]
name = uxtime
version = 1.1.0
description = application for converting local time or UTC into Unixtime and viceversa
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Franz Wiesinger
author_email = py@roadrunnerserver.com
url = https://www.roadrunnerserver.com/contentshow/unixtimeconverter
keywords = 
    unixtime
    utc
    local time
    the epoch
    converter
    tkinter
    GUI
    timezone
    datetime

classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: X11 Applications
    Environment :: Win32 (MS Windows)
    Intended Audience :: Customer Service
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    Natural Language :: English
    Programming Language :: Python :: 3
    Topic :: Desktop Environment
    Topic :: Software Development
    Topic :: Utilities

[project.urls]
Repository = https://github.com/WiesingF/UnixtimeConverter
Changelog = https://github.com/WiesingF/UnixtimeConverter/blob/main/changes.rst
Homepage = https://www.roadrunnerserver.com/contentshow/unixtimeconverter
Documentation = https://docs.roadrunnerserver.com/unixtime/html/index.html
Issues = https://github.com/WiesingF/UnixtimeConverter/issues

[options]
include_package_data = true
python_requires = >=3.9
install_requires =
    datetime
    tzdata

[options.packages.find]
where=uxtime
exclude = 
    .coverage
    .python-version
    .pytest_cache
    __pycache__
    uxtime/res/__pycache__
    .gitignore

[options.package_data]
* = *.txt, *,png, *.md, *.in, *.rst, *.html

[project.optional-dependencies]
gui = tkinter

[options.entry_points]
gui_scripts = 
    unixtime = uxtime.__main__:main
